Package: aroma.core
===================

Version: 2.4.13 [2012-03-23]
o Added alpha versions of PairedPSCNData and NonPairedPSCNData,
  which inherits from RawGenomicSignals.
o Turned weightedMad() into a default method, added help documentation
  with example code.
o BUG FIX: "["() for RichDataFrame would loose the class attribute,
  unless argument 'drop' was FALSE.


Version: 2.4.12 [2012-03-15]
o Now colBinnedSmoothing(), colKernelSmoothing() and
  colGaussianSmoothing() returns a matrix with column names
  as in argument 'Y'.
o For RawGenomicSignals, added argument 'fields' to binnedSmoothing()
  and binnedSmoothingByField().  Also added argument 'field' to
  getSignals() and estimateStandardDeviation().
o Now RawGenomicSignals extends new internal RichDataFrame class.
o CLEANUP: Dropped deprecated files from the reports/includes/js/
  directory installed by ArrayExplorer and ChromosomeExplorer.


Version: 2.4.11 [2012-03-12]
o Added binnedSmoothingByField() for RawGenomicSignals.
o Added subset() for RawGenomicSignals.
o Added get- and setVirtualField() for RawGenomicSignals.
o Added argument 'sort' to as.data.frame() for RawGenomicSignals.


Version: 2.4.10 [2012-03-06]
o GENERALIZATION: The new ArrayExplorer v3.4 will work with most
  commonly used web browsers including Mozilla Firefox, Google Chrome,
  Microsoft Internet Explorer, Apple Safari, and Opera.


Version: 2.4.9 [2012-03-06]
o ROBUSTNESS: Now all writeDataFrame() methods will add quotation
  marks around column names that contain a comment character ('#').
  This will make the written file readable with read.table() even 
  when there are header comments with prefix '#'.  This issue was
  reported by Yu Song at Oakland University.
o Now createImage() for matrix creates images of type "png::array"
  by default (used to be "EBImage::Image").  If the latter, then
  at least EBImage v3.9.7 (July 2011) is required.
o BUG FIX: write() for RasterImage would write truncated intensities,